spawn buttons are split and collapsable. spawn container no longer overflows past screen bounds.

--- a/style.css
+++ b/style.css
@@ -62,9 +62,11 @@ div, .force-arrows, .node-relations, .coord-label, .id-label, .hotspot-group {
 .ui-panel {
     text-align: left;
     font-size: 10px;
-    width: 150px;
-    position: absolute;
+    width: 170px;
+    position: fixed;
     z-index: 9999;
+    display: flex;
+    flex-direction: column; 
 }
 .ui-panel-box{
   background: rgba(255, 255, 255, 0.7);
@@ -72,12 +74,16 @@ div, .force-arrows, .node-relations, .coord-label, .id-label, .hotspot-group {
   border: 1px solid #ccc;
   border-radius: 5px;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+  overflow: hidden;
 }
 .ui-panel-top { top: 15px;}
 .ui-panel-left { left: 15px;}
 .ui-panel-bottom { bottom: 15px;}
 .ui-panel-right { right: 15px;}
+#debug-panel {    height: calc(100vh - 30px);}
+#view-panel { height: auto; display: table;}
+#simulation-panel {max-height: calc(100% - 50px); overflow-y: auto;}
 #detail-panel { height: 200px;}
 #metrics-panel { min-width: 350px;}
 .ui-panel input[type="checkbox"]:checked + span { font-weight: bold; }
@@ -142,12 +148,8 @@ button { margin-bottom: 5px;}
   clear: both;
 }
 /* #removeAllButton { margin-top: 10px;} */
-.simulation-panel>div:nth-child(n+3) {padding-top: 15px;}
-.simulation-panel{
-  width: 150px;
-  max-height: 60vh;
-  overflow-y: scroll;
-}
+.simulation-panel>div:last-child {padding-top: 15px;}
+
 .ui-panel hr {
   border: 0;
   border-top: 1px rgba(0,0,0,0.4) solid;
@@ -209,4 +211,37 @@ table.metrics thead {
 
 image.node-icon {
   filter: drop-shadow(1px 1px 2px rgba(0,0,0,0.4));
+}
+
+.collapse-header {
+    cursor: pointer; /* Change cursor to indicate it's clickable */
+    display: flex;
+    align-items: center; /* Center items vertically */
+    height: 20px;
+}
+
+.caret {
+    margin-right: 8px; /* Space between caret and text */
+    transition: transform 0.6s ease; /* Smooth transition for rotation */
+    display: inline-block; /* Necessary for rotation effect */
+}
+
+/* Rotate caret when active */
+.caret.active {
+    transform: rotate(-180deg); /* Rotate 180 degrees */
+}
+
+/* Initially hide button containers */
+.button-container {
+    display: none; /* Hidden by default */
+}
+
+.button-container.active {
+    display: flex; /* Display when active */
+}
+
+.spawn-button-group {
+    overflow: hidden; /* Prevent content from overflowing */
+    transition: height 0.5s ease; /* Smooth height transition */
+    height: 20px;
 }
